# ts-parsers

./: .gitignore  .rusty-hook.toml  Cargo.toml  LICENSE  README.md  plan.md
.github/workflows/: lint.yml
crates/ts-parsers/: .gitignore  Cargo.toml
crates/ts-parsers/src/: main.rs
crates/ts-parsers/src/data/: state.rs
crates/ts-parsers/src/subcommands/: mod.rs  uninstall.rs
crates/ts-parsers/tests/fixtures/: wanted-parsers.txt
range-to-vec/: Cargo.toml  LICENSE
src/: cli.rs  file.rs  file2.rs  file3.rs  main.rs  parser.rs
src/compiler/: cc.rs  clang.rs  compiler.rs  mod.rs  zig.rs
src/data/: changelog.rs  mod.rs  parsers.rs  state.rs
src/ops/: backups_ops.rs  mod.rs  parser_ops.rs
src/subcommands/: backups.rs  compile.rs  install.rs  lock.rs  mod.rs  subcommand.rs  uninstall.rs  unlock.rs  update.rs
src/utils/: archives.rs  backups.rs  colors.rs  command.rs  fs.rs  http.rs  mod.rs  paths.rs  renderer.rs
src/utils/num_args/: errors.rs  lexer.rs  mod.rs  parser.rs
test-assets/: state-tmpl.json  state.json  state2.json  wanted-parsers.txt
tests/: common.rs  compile.rs  install.rs  lock.rs  uninstall.rs  unlock.rs  update.rs  utils.rs
tests/fixtures/: parsers-v2024-09-18-3c6af36.json  parsers-v7e9139d.json  state-schema.json
tests/outputs/test-install-force/: state.json
tests/outputs/test-install-force/backups/: backup-[2024-03-05_12-56-05]-[v212b7a5-force-install].tar.bz2
tests/outputs/test-install-specific/: state.json
tests/outputs/test-install-wanted/: state.json
tests/outputs/test-install-with-zig/: state.json
tests/outputs/test-uninstall-locked-parser/: state.json
tests/outputs/test-uninstall-locked-parser/backups/: backup-[2024-03-05_12-56-12]-[uninstall].tar.bz2
tests/outputs/test-uninstall-specific/: state.json
tests/outputs/test-uninstall-specific/backups/: backup-[2024-03-05_12-56-14]-[uninstall].tar.bz2
tests/outputs/test-uninstall-wanted/: state.json
tests/outputs/test-uninstall-wanted/backups/: backup-[2024-03-05_12-56-12]-[uninstall].tar.bz2
tests/outputs/test-update-do-updates-specific/: state.json
tests/outputs/test-update-do-updates-specific/backups/: backup-[2024-03-05_12-56-22]-[v212b7a5-update].tar.bz2
tests/outputs/test-update-locked-parsers/: state.json
tests/outputs/test-update-locked-parsers/backups/: backup-[2024-03-05_12-56-18]-[v212b7a5-update].tar.bz2
tests/outputs/test-update-no-updates-not-installed/: state.json
tests/outputs/test-update-no-updates-specific/: state.json
tests/outputs/unit-tests/: state.json
ts-parsers/src/subcommands/: backups.rs
ts-parsers/src/utils/: http.rs  mod.rs
