[workspace]
members = ["crates/ts-parsers", "crates/range-to-vec"]
default-members = ["crates/ts-parsers"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Kevin Silveter"]
repository = "https://github.com/KevinSilveter/ts-parsers"
homepage = "https://github.com/KevinSilveter/ts-parsers"
license = "MIT"

[workspace.dependencies]
range-to-vec = { path = "crates/range-to-vec" }

[profile.release]
strip = true
codegen-units = 1
opt-level = 3
lto = "thin"
