[package]
name = "ts-parsers"
version = "0.1.3"
description = "A tool to manage tree-sitter parsers used by nvim-treesitter"
edition = "2024"
authors = ["Kevin Silveter"]
repository = "https://github.com/KevinSilveter/ts-parsers"
homepage = "https://github.com/KevinSilveter/ts-parsers"
license = "MIT"

[dependencies]
ahash = { version = "0.8.9", features = ["serde"] }
anstyle = "1.0.6"
anyhow = "1.0.80"
async-trait = "0.1.77"
byte-unit = "5.1.4"
bzip2 = "0.4.4"
cfg-if = "1.0.0"
chrono = { version = "0.4.33", features = ["clock", "serde"] }
clap = { version = "4.5.2", features = ["derive", "color"] }
crossterm = "0.28.1"
dirs = "5.0.1"
flate2 = "1.0.28"
fs_extra = "1.3.0"
indoc = "2.0.5"
lazy_static = "1.4.0"
reqwest = { version = "0.12.9", default-features = false, features = [
   "json",
   "rustls-tls",
] }
self_update = { version = "0.41.0", default-features = false, features = [
   "rustls",
   "archive-tar",
   "archive-zip",
   "compression-flate2",
   "compression-zip-deflate",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
shellexpand = "3.1.0"
strip-ansi-escapes = "0.2.0"
tabled = { version = "0.16.0", default-features = false, features = ["std"] }
tar = "0.4.40"
tempfile = "3.10.0"
tokio = { version = "1.36.0", features = ["macros", "signal", "sync"] }
tokio-process-stream = "0.4.0"
tokio-stream = "0.1.14"
xz = "0.1.0"

[dev-dependencies]
assert_cmd = { version = "2.0.14", features = ["color"] }
jsonschema = "0.26.1"
predicates = "3.1.0"
rusty-hook = "0.11.2"


[profile.release]
strip = true
codegen-units = 1
opt-level = 3
lto = "thin"
