[package]
name = "range-to-vec"
version = "0.0.0"
description = "A small parser to transform a string input range to vector of integers"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

[dependencies]
